# keepcalm_web

./: .gitignore  KeepCalm_Web_Documentacao_Unificada.md  KeepCalm_Web_Especificacao_Tecnica.md  README.md  RELATORIO_SENAI.tex  RELATORIO_STATUS_KEEP_CALM.md  Rakefile  implementation_plan.md
.github/workflows/: release.yml
keepcalm-web/: frontend_error.txt  frontend_error_utf8.txt  implementantion.txt  package-lock.json  package.json
keepcalm-web/src/: App.css  App.tsx  main.tsx
keepcalm-web/src-tauri/: Cargo.toml  build_error.txt  build_error_2.txt  build_errors.txt  build_log.txt  cargo_error.txt  cargo_error_utf8.txt  cargo_errors.txt  cargo_log.txt  cargo_log_2.txt  cargo_log_3.txt  cargo_log_4.txt  error.txt  error_short.txt  errors.txt  tauri.conf.json  tauri.dev.1430.json
keepcalm-web/src-tauri/capabilities/: default.json
keepcalm-web/src-tauri/src/: lib.rs  main.rs
keepcalm-web/src-tauri/src/commands/: mod.rs  network.rs  pip.rs  privacy.rs  repeater.rs  sidecars.rs  tabs.rs
keepcalm-web/src-tauri/src/network/: detector.rs  doh.rs  mod.rs  tor.rs
keepcalm-web/src-tauri/src/privacy/: fingerprint.rs  mod.rs  request_filter.rs  youtube.rs
keepcalm-web/src-tauri/src/traffic/: mod.rs  models.rs
keepcalm-web/src/components/: BackendListener.tsx  BookmarksBar.tsx  ContentArea.tsx  DownloadIndicator.tsx  HeaderBar.tsx  KeepCalmPdfViewer.tsx  NetworkSettings.css  NetworkSettings.tsx  PrivacyPanel.tsx  SecurityLab.tsx  StartPage.tsx  (+5 more)
scripts/: build_blocklist.rb  generate_icons.rb  provision_assets.ps1  provision_assets.rb  provision_jwt_tool.ps1
server/: app.rb
spec/: blocklist_spec.rb
(+9 files in other folders)
